# client-churn-prediction

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml
app/: streamlit_app.py
configs/: project.toml
data/raw/: README.md  test_prepared.csv  train_prepared.csv
data/sample/: churn_sample.csv
docs/: deployment.md
models/: model_card.json  pipeline.joblib
notebooks/: 01_business_understanding.ipynb  02_data_exploration.ipynb  03_feature_engineering.ipynb  04_model_comparison.ipynb  05_hyperparameter_tuning.ipynb  06_deployment.ipynb
src/: config.py  data_loader.py  pipeline.py  predict.py  preprocessing.py  train.py
src/client_churn_prediction/: __init__.py  api.py  features.py  models.py
tests/: test_pipeline.py
