[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "client-churn-prediction"
version = "0.1.0"
description = "Client Churn Prediction Kaggle portfolio workflow"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
